--- a/intex.html
+++ b/intex.html
@@ -18,7 +18,7 @@
        </nav> 
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111">+38 096 111 11 11</a>
-     </header>
+        </header>
     <main>
      <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
@@ -89,10 +89,13 @@
     <footer>
  <a href="/">WebStudio</a>
         <address>
-            <a href=""> м. Київ, пр-т Лесі Українки, 26</a>
+        м. Київ, пр-т Лесі Українки, 26
         </address>
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>   
+        </address>
+    
     </footer>
 </body>
 </html>
