--- a/intex.html
+++ b/intex.html
@@ -72,7 +72,6 @@
               src="./images/typing.jpg"
               alt="Людина друкує код"
               width="370"
-              height="294"
             />
           </li>
           <li>
@@ -80,7 +79,6 @@
               src="./images/smartphone.jpg"
               alt="Людина дивиться в смартфон"
               width="370"
-              height="294"
             />
           </li>
           <li>
@@ -88,7 +86,6 @@
               src="./images/palette.jpg"
               alt="Палітра кольрів на планшеті"
               width="370"
-              height="294"
             />
           </li>
         </ul>
@@ -101,7 +98,6 @@
               src="./images/member1.jpg"
               alt="Фото дизайнера продукту"
               width="270"
-              height="260"
             />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
@@ -111,7 +107,6 @@
               src="./images/member2.jpg"
               alt="Фото розробника"
               width="270"
-              height="260"
             />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
@@ -121,7 +116,6 @@
               src="./images/member3.jpg"
               alt="Фото маркетолога"
               width="270"
-              height="260"
             />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
@@ -131,7 +125,6 @@
               src="./images/member4.jpg"
               alt="Фото дизайнера"
               width="270"
-              height="260"
             />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
@@ -140,7 +133,7 @@
       </section>
     </main>
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <address>
         <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26 </a><br />
         <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
